--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "@react-navigation/bottom-tabs": "^6.5.12",
     "@react-navigation/native": "^6.1.10",
     "expo": "~50.0.5",
+    "expo-font": "~11.10.2",
     "expo-secure-store": "^12.8.1",
     "expo-status-bar": "~1.11.1",
     "expo-web-browser": "~12.8.2",
+    "graphql": "^15.8.0",
+    "graphql-request": "^6.1.0",
     "react": "18.2.0",
-    "react-native": "0.73.2",
+    "react-native": "^0.73.4",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0"
   },
