--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@clerk/clerk-expo": "^0.20.4",
+    "@clerk/clerk-expo": "^0.20.5",
     "@react-navigation/bottom-tabs": "^6.5.12",
     "@react-navigation/native": "^6.1.10",
     "@react-navigation/stack": "^6.3.21",
+    "date-fns": "^3.3.1",
     "expo": "~50.0.5",
     "expo-font": "~11.10.3",
     "expo-secure-store": "~12.8.1",
@@ -22,9 +23,13 @@
     "graphql-request": "^6.1.0",
     "react": "18.2.0",
     "react-native": "0.73.4",
+    "react-native-calendar-picker": "^8.0.1",
+    "react-native-calendar-range-picker": "^1.5.8",
+    "react-native-customized-calendar": "^1.0.4",
+    "react-native-gesture-handler": "~2.14.0",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
-    "react-native-gesture-handler": "~2.14.0"
+    "react-native-simple-calendar": "^0.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
